...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: Colors.blueAccent,
        title: Text("Your Events"),
        actions: [
          IconButton(
              onPressed: () async {
                bool result = await showSearch(
                  context: context,
                  delegate: CustomSearchDelegate(),
...
